KCINFR-92: Removed groovy PoC, added integration tests to verify phase of maven