@@ -237,6 +237,34 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1</version>
 		    </plugin>
+		    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${failsafe.plugin.version}</version>
+                <configuration>
+                    <useFile>${failsafe.useFile}</useFile>
+                    <testFailureIgnore>${failsafe.testFailureIgnore}</testFailureIgnore>
+                    <test>${failsafe.test}</test>
+                    <forkMode>${failsafe.forkMode}</forkMode>
+                    <reportFormat>${failsafe.reportFormat}</reportFormat>
+                    <argLine>${failsafe.argLine}</argLine>
+                    <aggregate>${failsafe.aggregate}</aggregate>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>run-integration-tests</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify-integration-tests</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+		        </executions>
+            </plugin>
 		</plugins>
 	</build>
 
@@ -1424,7 +1452,7 @@
 					<reportFormat>${surefire.reportFormat}</reportFormat>
 					<argLine>${surefire.argLine}</argLine>
 					<aggregate>${surefire.aggregate}</aggregate>
-			</configuration>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -1529,6 +1557,14 @@
 		<surefire.reportFormat>plain</surefire.reportFormat>
 		<surefire.argLine>-Xmx1536m -XX:MaxPermSize=512m</surefire.argLine>
 		<surefire.aggregate>true</surefire.aggregate>
+		<failsafe.plugin.version>2.6</failsafe.plugin.version>
+        <failsafe.usefile>false</failsafe.usefile>
+        <failsafe.testFailureIgnore>false</failsafe.testFailureIgnore>
+        <failsafe.test>IntegrationSuite</failsafe.test>
+        <failsafe.forkMode>never</failsafe.forkMode>
+        <failsafe.reportFormat>plain</failsafe.reportFormat>
+        <failsafe.argLine>-Xmx1536m -XX:MaxPermSize=512m</failsafe.argLine>
+        <failsafe.aggregate>true</failsafe.aggregate>
     	<cobertura.maven.plugin.version>2.4</cobertura.maven.plugin.version>
     	<gg.wsdl.location>${basedir}/src/main/resources/wsdl</gg.wsdl.location>
     	<gg.schema.dir>${basedir}/src/main/resources/wsdl/schema</gg.schema.dir>  
